# rtl-sdr-java-reciever

./: README.md  build.gradle  commands.txt  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
native/: rtlsdr_jni.c
native/mac/: CMakeLists.txt
native/raspberry/: CMakeLists.txt  rtlsdr_jni.c
src/main/java/threadfool/op/: Main.java  RtlSdr.java
